API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes

01-Jun-2003     Joachim Ansorg <junkmail@joachim.ansorgs.de>
	Added WEBIF filters, based on HTMLHREF filters.
	Added new utilweb stuff for working with urls etc.
	Fixed SWORD_NAMESPACE_START and SWORD_NAMESPACE_END in defs.h if NO_SWORD_NAMESPACE was defined

30-May-2003	Troy A. Griffitts <scribe@crosswire.org>
	Added utilities/installmgr to call some of the
		basic functionality from engine install
		routines.
	Added removeModule to installmgr.cpp, copied from
		Windows InstallMgr.

26-May-2003	Troy A. Griffitts <scribe@crosswire.org>
	Added first cut of osis2mod using the ESV as a
		basic template.  Works with VerseKey mods
		only and doesn't capture all data.
	Improved verse reference parsing to include proper
		parsing of osisRef attributes and other
		misc. anomalies.
	Returned canon.h back to previous state to
		avoid locale key mismatches

25-May-2003	Troy A. Griffitts <scribe@crosswire.org>
	Added utilfuns/utilxml.cpp and test/xmltest which
		include basic xml utility classes
	Added comparison operators to SWBuf so it plays
		nicely with stl containers

19-Feb-2003	Troy A. Griffitts <scribe@crosswire.org>
	Added utilfuns/swbuf.cpp and tests/swbuftest
	Fixed make system to include osisrtf and osisplain
	Started HUGE task of moving all char **buf over
		to SWBuf &buf

06-Feb-2003	Joachim Ansorg <joachim@ansorgs.de>
	Added ro.conf (Romanian) in locales.d

14-Jan-2003	Joachim Ansorg <joachim@ansorgs.de>
	Added strip filter for the red letter words so users can
		turn it off
	Worked a bit on locales.d/de.conf to include some abbrevs

10-Jan-2003	Terry Biggs <tbiggs@infinet.com>
	Added new osisstrongs and osismorph support to gbfhtml*.

08-Jan-2003	Troy A. Griffitts <scribe@crosswire.org>
	Added new osisstrongs and osismorph option filters.
	Hacked gbfrtf to support, for now:
		the osis <w> tag,
		Removed OSIS <note>...</note>,
		Removed any empty strongs tags for the article.
