@@ -69,9 +69,7 @@ char ThMLScripref::processText(SWBuf &text, const SWKey *key, const SWModule *mo
 
 				// if not a scripref token, keep token in text
 				if (!hide) {
-					text += '<';
-					text.append(token);
-					text += '>';
+					text += '<' + token + '>';
 				}
 				continue;
 			}
